--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,1 @@
-<footer>CryptoCoins made with Angular using CoinGecko API - Karabo Molefe</footer>
+<footer>CoinWatch made with Angular using CoinGecko API - Karabo Molefe</footer>
