--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,9 @@
 <form class="search">
-    <input type="text"  (keyup)="searchCoin()" [(ngModel)]="searchText" placeholder="Search" />
+  <input
+    type="text"
+    name="search"
+    [(ngModel)]="searchText"
+    (input)="searchCoin()"
+    placeholder="Search"
+  />
 </form>
