--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,27 +1,22 @@
 <table>
-    <thead>
-      <tr>
-        <th *ngFor="let title of titles">
-          {{title}}
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let coin of coins; let i = index">  
-        <td class="">{{i + 1}}</td>
-        <td>
-          <img [src]="coin.image" alt="{{coin.name}}" style="width:2rem">
-          <span class="coin-name"> {{coin.name}}</span>
-        </td>
-        <td>
-          ${{coin.current_price}}
-        </td>
-        <td [ngClass]="coin.price_change_percentage_24h > 0 ? 'text-success': 'text-danger'">
-          {{coin.price_change_percentage_24h.toLocaleString()}}%
-        </td>
-        <td>
-          {{coin.total_volume.toLocaleString()}}
-        </td>
-      </tr>
-    </tbody>
+  <thead>
+    <tr>
+      <th *ngFor="let title of titles">{{ title }}</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let coin of coins; let i = index">
+      <td>{{ i + 1 }}</td>
+      <td>
+        <img [src]="coin.image" [alt]="coin.name" style="width: 2rem;">
+        <span class="coin-name">{{ coin.name }}</span>
+      </td>
+      <td>${{ coin.current_price }}</td>
+      <td [ngClass]="coin.price_change_percentage_24h > 0 ? 'text-success' : 'text-danger'">
+        {{ coin.price_change_percentage_24h.toLocaleString() }}%
+      </td>
+      <td>{{ coin.total_volume.toLocaleString() }}</td>
+    </tr>
+  </tbody>
 </table>
+<p *ngIf="coins.length === 0">No coins found.</p>
